syntax = "proto3";

package geo.v1;

message LatLng {
  double latitude = 1;
  double longitude = 2;
}
